added more styling

--- a/cv-project/public/resume.html
+++ b/cv-project/public/resume.html
@@ -21,7 +21,7 @@
         <div>
           <div class="jobs">
             <h3>Web Developer</h3>
-            <h4>Westminster, CA / September 2016 - Present</h4>
+            <h4>McGee Solutions, Westminster, CA / September 2016 - Present</h4>
             <ul>
               <li>
                 Morbi enim nunc faucibus a pellentesque. Quis viverra nibh cras
@@ -39,7 +39,7 @@
           </div>
           <div class="jobs">
             <h3>IT Support</h3>
-            <h4>Westminster, CA / September 2014 - December 2015</h4>
+            <h4>TechHub, Westminster, CA / September 2014 - December 2015</h4>
             <ul>
               <li>
                 Morbi enim nunc faucibus a pellentesque. Quis viverra nibh cras
