update form template

--- a/cv-project/public/form.html
+++ b/cv-project/public/form.html
@@ -2,21 +2,37 @@
   <div id='pesonal-info-form-container'>
     <h2>Personal Information</h2>
     <form>
-      <input name='first-name' placeholder='First Name' type='text'></input>
-      <input name='last-name' placeholder='Last Name' type='text'></input>
+      <input
+        name='first-name'
+        placeholder='First Name'
+        type='text'
+        required
+      ></input>
+      <input
+        name='last-name'
+        placeholder='Last Name'
+        type='text'
+        required
+      ></input>
       <input name='email' placeholder='Email' type='text'></input>
       <input
         name='phone'
         placeholder='Phone Number'
         type='tel'
         pattern='[0-9]{3}-[0-9]{2}-[0-9]{3}'
+        required
       ></input>
     </form>
     <form>
-      <input name='address' placeholder='Address' type='text'></input>
-      <input name='city' placeholder='City' type='text'></input>
-      <input name='state' placeholder='State' type='text'></input>
-      <input name='zip' placeholder='Zip' type='text'></input>
+      <input
+        name='address'
+        placeholder='Address'
+        type='text'
+        required
+      ></input>
+      <input name='city' placeholder='City' type='text' required></input>
+      <input name='state' placeholder='State' type='text' required></input>
+      <input name='zip' placeholder='Zip' type='text' required></input>
     </form>
   </div>
   <div id='resume-obj-container'>
@@ -25,6 +41,7 @@
       <textarea
         name='objective'
         placeholder='Summarize your career goals'
+        required
       ></textarea>
     </form>
   </div>
@@ -36,19 +53,30 @@
         placeholder='Title'
         type='text'
         class='experience-fields'
+        required
       ></input>
       <input
         name='company-name'
         placeholder='Company'
         type='text'
         class='experience-fields'
+        required
       ></input>
       <input
-        placeholder='From'
+        placeholder='From:'
         type='date'
-        class='experience-fields'
+        class='experience-fields from-date'
+        required
       ></input>
-      <input placeholder='To' type='date' class='experience-fields'></input>
+      <input
+        placeholder='To:'
+        type='date'
+        class='experience-fields to-date'
+      ></input>
+      <label class='switch'>
+        <input type='checkbox' class='toggle-ongoing'></input>
+        <span class='slider round'>Present</span>
+      </label>
       <input
         name='title'
         placeholder='Activities & Responsiblities'
@@ -90,10 +118,30 @@
         name='school'
         placeholder='Name of school or organization'
         type='text'
+        class='education-input'
       ></input>
-      <input name='degree' placeholder='Degree title' type='text'></input>
-      <input name='from-date' placeholder='From' type='date'></input>
-      <input name='to-date' placeholder='To' type='date'></input>
+      <input
+        name='degree'
+        placeholder='Degree title'
+        type='text'
+        class='education-input'
+      ></input>
+      <input
+        name='from-date'
+        placeholder='From:'
+        type='date'
+        class='education-input from-date'
+      ></input>
+      <input
+        name='to-date'
+        placeholder='To:'
+        type='date'
+        class='to-date'
+      ></input>
+      <label class='switch'>
+        <input type='checkbox' class='toggle-ongoing'></input>
+        <span class='slider round'>Present</span>
+      </label>
     </form>
     <button id='add-education-button'>
       <span>
